--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 services:
   is_go:
     image: jinergenkai/hh-is-go
+    container_name: is_go
     build: .
     ports:
       - "9999:9999"
